--- a/sass/main.scss
+++ b/sass/main.scss
@@ -35,14 +35,14 @@ nav {
 
 	.fa-bars {
 		padding: 7px;
-		color: $green-color;
+		color: #fff;
 	}
 	.fa-bars:hover {
 		color: #fff;
 	}
 
 	.nav-link {
-		color: $green-color;
+		color: #fff;
 	}
 	.nav-link:hover {
 		color: #fff;
@@ -325,12 +325,6 @@ header {
 		.contact-item {
 			margin: 30px 0;
 
-			h3 {
-				margin-bottom: 15px;
-				text-transform: uppercase;
-				letter-spacing: 2px;
-			}
-
 			.social-media {
 				font-size: 26px;
 
@@ -346,9 +340,28 @@ header {
 		}
 	}
 }
-
-@media (min-width: 1200px) {
+@media (min-width: 375px) {
 	header {
+		h1 {
+			font-size: 36px;
+		}
+		p {
+			font-size: 16px;
+		}
+	}
+}
+@media (min-width: 600px) {
+	header {
+		.hero-img {
+			background-image: url('../img/hemp-field-g9b6573e27_1920.jpg');
+		}
+	}
+}
+@media (min-width: 768px) {
+	header {
+		h1 {
+			font-size: 42px;
+		}
 		.hero-img {
 			background-image: url('../img/hemp-field-g9b6573e27_1920.jpg');
 		}
@@ -365,30 +378,13 @@ header {
 	}
 	
 }
-@media (min-width: 768px) {
-	header {
-		h1 {
-			font-size: 42px;
-		}
-		.hero-img {
-			background-image: url('../img/hemp-field-g9b6573e27_1920.jpg');
-		}
-	}
-}
-@media (min-width: 600px) {
+
+@media (min-width: 1200px) {
 	header {
 		.hero-img {
 			background-image: url('../img/hemp-field-g9b6573e27_1920.jpg');
 		}
 	}
 }
-@media (min-width: 375px) {
-	header {
-		h1 {
-			font-size: 36px;
-		}
-		p {
-			font-size: 16px;
-		}
-	}
-}
+
+
