--- a/css/main.css
+++ b/css/main.css
@@ -392,10 +392,22 @@ header .fa-chevron-down {
   }
 }
 @media (min-width: 375px) {
+  header .hero-img {
+    background-image: url("../img/plant-g1f9b1b553_1280.jpg");
+  }
   header h1 {
     font-size: 36px;
   }
   header p {
     font-size: 16px;
+  }
+  .contact {
+    height: calc(70vh);
+  }
+  .aboutus {
+    height: auto;
+  }
+  .portfolio {
+    height: auto;
   }
 }/*# sourceMappingURL=main.css.map */
